# ari510capstone-fedlearn

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.sh
assignment/: CODABENCH_PROGRESS.md  CODABENCH_SETUP_PLAN.md
codabench_bundle/: README.md  competition.yaml
codabench_bundle/pages/: data.md  evaluation.md  overview.md  terms.md
codabench_bundle/public_data/: test.csv
codabench_bundle/reference_data/: test_labels.csv
codabench_bundle/scoring_program/: metadata  requirements.txt  score.py  test_score.py
codabench_bundle/starting_kit/: README.md  baseline_notebook.ipynb  predictions.csv  sample_submission.csv  train.csv
configs/: README.md  centralized_gb.pkl  centralized_logreg.pkl  centralized_sgd.pkl  federated_sgd.pkl  final_model.pkl  preprocessor.pkl
db/duckdb/build-scripts/: README.md  duckdb_load_data_gz.sql
docs/: DATA_DICTIONARY.md  DATA_DICTIONARY_ENRICHED.ipynb  DATA_DICTIONARY_ENRICHED.md  FEATURE_ENGINEERING_PACKAGE.md  HYPERPARAMETER_TUNING_PACKAGE.md  PHASE4_FEATURE_ENGINEERING_PACKAGE.md  PHASE5_HYPERPARAMETER_TUNING_PACKAGE.md  data_dictionary_web_scrape.md  schemaspy.csv
docs/annotations/: LICENSE.txt  README.md  annotation_guidelines.docx  annotations.xlsx
notebooks/: README.md
notebooks/exploratory/: 01_database_exploration.ipynb  03_feature_exploration.ipynb  04_partitioning_analysis.ipynb  05_feature_extraction_and_imputation.ipynb  06_model_comparison.ipynb  07_data_preprocessing_analysis.ipynb  08_comprehensive_model_comparison.ipynb  09_feature_importance_analysis.ipynb  10_hyperparameter_tuning.ipynb
notebooks/exploratory/data_samples/: 01_categorical_features_sample.csv  09_category_summary.csv  (+11 more)
scripts/: README.md  add_export_cells.py  create_enriched_from_schemaspy.py  enrich_data_dictionary.py  fix_data_dictionary.py
src/: README.md  centralized_logreg.py  centralized_models.py  compute_model_metadata.py  federated_server.py  precompute_model_metadata.py
src/fedlearn/: evaluation.py  preprocessing.py
(+27 files in other folders)
