[project]
name = "ari510capstone-fedlearn"
version = "0.1.0"
description = "ARI 510 Capstone - Federated Learning"
authors = [
    {name = "Jim Prantzalos and Jamie Ontiveros"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
