[project]
name = "ari510capstone-fedlearn"
description = "ARI 510 Capstone - Federated Learning"
version = "0.1.0"
requires-python = ">=3.12,<4.0"
authors = [{name = "Jim Prantzalos and Jamie Ontiveros"}]
readme = "README.md"
dependencies = [
    "flwr[simulation]==1.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["fedlearn"]

[tool.flwr.app]
publisher = "umich"
name = "ari510capstone-fedlearn"

[tool.flwr.app.components]
clientapp = "fedlearn.federated.client:app"
serverapp = "fedlearn.federated.server:app"

[tool.flwr.app.config]
#ServerApp
num-server-rounds = 5
penalty = "l2"
local-epochs = 1
fraction-train = 1.0
fraction-evaluate = 1.0
